Set correct cursor state when hovering XFA form widgets.

Bug: 811331
Change-Id: Id7d44e0d0ef14252735516d4a9d62bf055da2076
Reviewed-on: https://chromium-review.googlesource.com/914849
Commit-Queue: dsinclair <dsinclair@chromium.org>
Reviewed-by: dsinclair <dsinclair@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537779}
Former-commit-id: 58afdff3757e338057e986618b291c2e5829676d